--- a/package.json
+++ b/package.json
@@ -33,21 +33,18 @@
   },
   "dependencies": {
     "deline": "^1.0.4",
-    "invariant": "^2.2.2",
-    "uuid": "^3.0.1"
+    "invariant": "^2.2.4",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.20.0",
-    "babel-eslint": "^6.1.0",
-    "babel-preset-react-native": "^1.9.0",
-    "eslint": "^3.11.1",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.14.0",
     "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-prefer-object-spread": "^1.0.0",
-    "eslint-plugin-react": "^6.8.0",
     "normalizr": "^2.3.0",
-    "redux": "^3.6.0"
+    "redux": "^4.0.1"
   }
 }
