--- a/.eslintrc
+++ b/.eslintrc
@@ -5,9 +5,7 @@
   "env": {
     "node": true
   },
-  "plugins": [
-    "prefer-object-spread"
-  ],
+  "plugins": ["prefer-object-spread"],
   "ecmaFeatures": {
     "arrowFunctions": true,
     "blockBindings": true,
@@ -31,11 +29,8 @@
     "new-cap": 0,
     "no-use-before-define": 0,
     "arrow-body-style": 0,
-    // triple equals is required except for when comparing with null
     "eqeqeq": [2, "allow-null"],
-    // Allow console methods, which get removed during build process
     "no-console": 0,
-    // Disable `arrow-parens` because it conflicts with Flow.
     "arrow-parens": 0,
     "prefer-object-spread/prefer-object-spread": 2
   },
