--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux-pack",
+  "name": "redux-pack-updated",
   "version": "0.1.5",
-  "description": "Sensible promise handling and middleware for redux",
+  "description": "Sensible promise handling and middleware for redux. This is a fork from https://github.com/lelandrichardson/redux-pack.git",
   "main": "lib/index.js",
   "scripts": {
     "prepublish": "npm run build",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lelandrichardson/redux-pack.git"
+    "url": "git+https://github.com/Robertmw/redux-pack.git"
   },
   "keywords": [
     "redux",
@@ -22,12 +22,12 @@
     "normalizr",
     "react"
   ],
-  "author": "Leland Richardson <leland.m.richardson@gmail.com>",
+  "author": "Robert Pamfile <robert.pamfile@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lelandrichardson/redux-pack/issues"
+    "url": "https://github.com/Robertmw/redux-pack/issues"
   },
-  "homepage": "https://github.com/lelandrichardson/redux-pack#readme",
+  "homepage": "https://github.com/Robertmw/redux-pack#readme",
   "peerDependencies": {
     "redux": "*"
   },
@@ -44,7 +44,6 @@
     "eslint": "^5.14.0",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-prefer-object-spread": "^1.0.0",
-    "normalizr": "^2.3.0",
     "redux": "^4.0.1"
   }
 }
