--- a/package.json
+++ b/package.json
@@ -34,16 +34,21 @@
   "dependencies": {
     "deline": "^1.0.4",
     "invariant": "^2.2.4",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.14.0",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-prefer-object-spread": "^1.0.0",
-    "redux": "^4.0.1"
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prefer-object-spread": "^1.2.1",
+    "eslint-plugin-react": "^7.16.0",
+    "prettier": "^1.19.1",
+    "redux": "^4.0.4"
   }
 }
